--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/shkrobadasha/frontend-project-46/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/shkrobadasha/frontend-project-46/actions)",
-  "main": "index.js",
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -21,6 +20,7 @@
   },
   "homepage": "https://github.com/shkrobadasha/frontend-project-46#readme",
   "dependencies": {
-    "commander": "^12.1.0"
+    "commander": "^12.1.0",
+    "lodash": "^4.17.21"
   }
 }
