--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/shkrobadasha/frontend-project-46#readme",
   "dependencies": {
+    "@hexlet/immutable-fs-trees": "^0.7.2",
     "commander": "^12.1.0",
     "js-yaml": "^4.1.0",
     "lodash": "^4.17.21",
