--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "[![Actions Status](https://github.com/shkrobadasha/frontend-project-46/actions/workflows/hexlet-check.yml/badge.svg)](https://github.com/shkrobadasha/frontend-project-46/actions)",
+  "main": "src/index.js",
   "type": "module",
   "scripts": {
     "test": "npx jest"
